@@ -13,7 +13,7 @@ namespace scene
 {
 
 //! constructor
-CTriangleSelector::CTriangleSelector(const ISceneNode* node)
+CTriangleSelector::CTriangleSelector(ISceneNode* node)
 : SceneNode(node), AnimatedNode(0), LastMeshFrame(-1)
 {
 	#ifdef _DEBUG
@@ -23,7 +23,7 @@ CTriangleSelector::CTriangleSelector(const ISceneNode* node)
 
 
 //! constructor
-CTriangleSelector::CTriangleSelector(const IMesh* mesh, const ISceneNode* node)
+CTriangleSelector::CTriangleSelector(const IMesh* mesh, ISceneNode* node)
 : SceneNode(node), AnimatedNode(0)
 {
 	#ifdef _DEBUG
@@ -137,7 +137,7 @@ void CTriangleSelector::updateFromMesh(const IMesh* mesh) const
 
 
 //! constructor
-CTriangleSelector::CTriangleSelector(const core::aabbox3d<f32>& box, const ISceneNode* node)
+CTriangleSelector::CTriangleSelector(const core::aabbox3d<f32>& box, ISceneNode* node)
 : SceneNode(node)
 {
 	#ifdef _DEBUG
@@ -172,7 +172,7 @@ void CTriangleSelector::update(void) const
 
 //! Gets all triangles.
 void CTriangleSelector::getTriangles(core::triangle3df* triangles,
-					s32 arraySize, s32& outTriangleCount, 
+					s32 arraySize, s32& outTriangleCount,
 					const core::matrix4* transform) const
 {
 	// Update my triangles if necessary
@@ -203,8 +203,8 @@ void CTriangleSelector::getTriangles(core::triangle3df* triangles,
 
 
 //! Gets all triangles which lie within a specific bounding box.
-void CTriangleSelector::getTriangles(core::triangle3df* triangles, 
-					s32 arraySize, s32& outTriangleCount, 
+void CTriangleSelector::getTriangles(core::triangle3df* triangles,
+					s32 arraySize, s32& outTriangleCount,
 					const core::aabbox3d<f32>& box,
 					const core::matrix4* transform) const
 {
