@@ -18,7 +18,7 @@ static bool testGetCollisionResultPosition(IrrlichtDevice * device,
 	triangle3df triOut;
 	vector3df hitPosition;
 	bool falling;
-	const ISceneNode* hitNode;
+	ISceneNode* hitNode;
 
 	vector3df resultPosition =
 		collMgr->getCollisionResultPosition(cubeSelector,
@@ -112,7 +112,7 @@ static bool getCollisionPoint_ignoreTriangleVertices(IrrlichtDevice * device,
 	line3df ray(0, 0, -5, 0, 0, 100);
 	vector3df hitPosition;
 	triangle3df hitTriangle;
-	const ISceneNode* hitNode;
+	ISceneNode* hitNode;
 
 	bool collision = collMgr->getCollisionPoint(ray, meta, hitPosition, hitTriangle, hitNode);
 
